--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -12,34 +12,9 @@ pipeline {
 
   agent {
     kubernetes {
+      cloud "sample-app"
       label 'sample-app'
       defaultContainer 'jnlp'
-      yaml """
-apiVersion: v1
-kind: Pod
-metadata:
-labels:
-  component: ci
-spec:
-  # Use service account that can deploy to all namespaces
-  serviceAccountName: cd-jenkins
-  containers:
-  - name: golang
-    image: golang:1.10
-    command:
-    - cat
-    tty: true
-  - name: gcloud
-    image: gcr.io/cloud-builders/gcloud
-    command:
-    - cat
-    tty: true
-  - name: kubectl
-    image: gcr.io/cloud-builders/kubectl
-    command:
-    - cat
-    tty: true
-"""
 }
   }
   stages {
@@ -57,6 +32,7 @@ spec:
     stage('Build and push image with Container Builder') {
       steps {
         container('gcloud') {
+          sh "cd sample-app"
           sh "PYTHONUNBUFFERED=1 gcloud builds submit -t ${IMAGE_TAG} ."
         }
       }
